--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,12 @@
 {
-  "name": "express",
+  "name": "ex_mvc4",
   "version": "0.0.1",
   "ignore": [
     "**/.*",
     "node_modules",
     "components"
-  ]
+  ],
+  "dependencies": {
+    "bootstrap": "*"
+  }
 }
